removing text align left as it is default, fixing button location

--- a/shared/css/professional_learning_marketing_banner.scss
+++ b/shared/css/professional_learning_marketing_banner.scss
@@ -69,13 +69,11 @@ $dark_blue_background_colour: #0d4172;
       .header {
         color: black;
         padding: 15px 10px 10px 30px;
-        text-align: left;
         position: relative;
       }
 
       .text {
         color: black;
-        text-align: left;
         line-height: 1;
         position: relative;
         left: 30px;
@@ -84,7 +82,7 @@ $dark_blue_background_colour: #0d4172;
     }
 
     .right {
-      padding-top: 26px;
+      padding-top: 30px;
       text-align: center;
       position: absolute;
       width: 50%;
